Updated and better consolidated the command-line scripts