@@ -1,6 +1,5 @@
 #!/bin/bash
 set -e
 
-export MAVEN_OPTS="-server -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -Xms128M -Xmx128M"
-mvn jetty:run -Dexec.args="$*"
+cd "`dirname $0`" && ./runBenchmarkSuite.sh +webserver $*
 
